# yanxi-paper-note

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
backend/: environment.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  chat.py  folders.py  models.py  note_edit.py  papers.py  skill.py  users.py
backend/app/core/: auth.py  config.py
backend/app/db/: models.py  session.py
backend/app/prompts/: chat.py  figure_optimizer.py  image_gen.py  note.py  note_edit.py  note_refine.py  note_section_refine.py  paper_cover.py  paper_summary.py
backend/app/schemas/: auth.py  chat.py  events.py  folder.py  model.py  paper.py  skill.py  user.py
backend/app/services/: ark_client.py  chat_pipeline.py  chat_tools.py  content_builder.py  figure_prompt.py  figure_prompt_optimizer.py  folders.py  llm.py  markdown_translate.py  mineru.py  model_registry.py  multimodal_input.py  note_content.py  note_edit_pipeline.py  note_export.py  note_figure_delete.py  note_generation_trace.py  note_pipeline.py  note_refine.py  note_section_figure.py  note_section_refine.py  note_sections.py  note_versions.py  note_worker.py  openai_client.py  paper_cover.py  paper_enrichment.py  paper_summary.py  parse_time.py  parse_worker.py  search_tools.py  thumbnail.py  user_account.py  web_search.py
backend/app/services/tools/: image_gen.py
backend/app/utils/: folder_theme.py
docs/: SETUP.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
integrations/: get_yanxi_api_key.py
(+79 files in other folders)
