[project]
name = "yanxi-backend"
version = "0.0.3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.6.0",
    "markdown>=3.5",
    "xhtml2pdf>=0.2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
